tests/errors/dimension_01.f90
program main
    integer, dimension("abcd") :: line
end program